ID-181_train_with_dataloader (#78)
* Started migration from Data2dLayer to DataLayer

Makes preparations for metrics logging on python
Functionality for c++ http added, but not working yet
Adds saving train metrics
Adds saving train metrics and responding with PNG

Adaptates code for new 4D blob

cpprest CI support
Add load possibility for zip
Add load possibility for png on predict
-------
GRA-122: Data loader implementation (#67)
Data loader implementation
-------
ID-154: Loss type selection (#70)
* Add loss type selection
* Add loss type selection
* Remove layer-class loss
* Clean up Loss type
* Make format
-------
ID-171: Fix input selection (#69)
* Fix input selection
* Clean up fix input selection
-------
Change train and predict for zip file case
Starts fixing train
Fixes train with dataloader
It's not fucking working :( (x3)
server train fix
Fixes train and predcit

* Follow up review

* Follow up review

* ID-167: Upload zip (#74)

* Fixes graph tests

* Fixes DataLayer

---------
